objects/Customer_Success_Engagement__c.object
<CustomObject><fields>
        <fullName>Account_MOS__c</fullName>
        <label>Account MOS</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Success Engagements</relationshipLabel>
        <relationshipName>Customer_Success_Engagements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Age_Days__c</fullName>
        <formula>IF(NOT(ISBLANK(Actual_Close_Date__c)), Actual_Close_Date__c - DATEVALUE(CreatedDate), Today() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Anonymization_Notes__c</fullName>
        <description>Notes on Anonymization Install task</description>
        <label>Anonymization Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Anonymization_Status__c</fullName>
        <description>Status of Anonymization Install task</description>
        <label>Anonymization Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Waiting on Internal</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Anonymization_Type__c</fullName>
        <label>Anonymization Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Username</fullName>
                </value>
                <value>
                    <fullName>Hostname</fullName>
                </value>
                <value>
                    <fullName>Salt</fullName>
                </value>
                <value>
                    <fullName>Double Salt</fullName>
                </value>
                <value>
                    <fullName>Servername</fullName>
                </value>
                <value>
                    <fullName>Paths</fullName>
                </value>
                <value>
                    <fullName>Username - no log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Anonymization_Version__c</fullName>
        <description>Install - Anonymization Version</description>
        <label>Anonymization Version</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Barriers_to_Access__c</fullName>
        <label>Barriers to Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CSE_Primary_Contact_Role_Count__c</fullName>
        <description>Count of primary contact role records associated to the engagement</description>
        <label>CSE Primary Contact Role Count</label>
        <summaryFilterItems>
            <field>CSE_Contact_Roles__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CSE_Contact_Roles__c.Customer_Success_Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Campus_Computing_Only__c</fullName>
        <label>Access Limited to Campus Computing Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Completed_Activities__c</fullName>
        <label>Completed Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alumni Event</fullName>
                    <isActive>false</isActive>
                    <label>Alumni Event</label>
                </value>
                <value>
                    <fullName>Customer Reference</fullName>
                </value>
                <value>
                    <fullName>Digital Poster</fullName>
                </value>
                <value>
                    <fullName>Faculty and Department Blogs</fullName>
                </value>
                <value>
                    <fullName>Faculty Email(s)</fullName>
                </value>
                <value>
                    <fullName>Faculty Training and Development</fullName>
                </value>
                <value>
                    <fullName>Handout</fullName>
                </value>
                <value>
                    <fullName>Learning Management System Announcement</fullName>
                </value>
                <value>
                    <fullName>List Serve(s)</fullName>
                </value>
                <value>
                    <fullName>MATLAB Web Page</fullName>
                </value>
                <value>
                    <fullName>Mobile Device App</fullName>
                </value>
                <value>
                    <fullName>Newsletter(s)</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Post TAH Event - Plug in Events on Campus</fullName>
                    <isActive>false</isActive>
                    <label>Post TAH Event - Plug in Events on Campus</label>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Schwag (giveaways)</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Student Email(s)</fullName>
                </value>
                <value>
                    <fullName>Student Event(s)</fullName>
                </value>
                <value>
                    <fullName>Student Orientation Packet</fullName>
                </value>
                <value>
                    <fullName>Student Publication</fullName>
                </value>
                <value>
                    <fullName>Tech Fair</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web Banner on Intranet Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Cost_Recovery__c</fullName>
        <label>Cost Recovery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Faculty/Staff/Researcher</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Country_Fed_Participant__c</fullName>
        <description>Install - Country Federation Participant picklist</description>
        <label>Country Federation Participant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Course_Level__c</fullName>
        <label>Course Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+(grad)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Number__c</fullName>
        <label>Course Number</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_URL__c</fullName>
        <inlineHelpText>Course URL, Research Lab, Community URL</inlineHelpText>
        <label>Customer URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Date_Moved_to_Awareness_1_Stage__c</fullName>
        <label>Date Moved to Awareness 1 Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Moved_to_Awareness_2_Stage__c</fullName>
        <label>Date Moved to Awareness 2 Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Moved_to_C_Stage__c</fullName>
        <label>Date Moved to C Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Moved_to_Commitment_Stage__c</fullName>
        <label>Date Moved to Commitment Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Moved_to_D_Stage__c</fullName>
        <label>Date Moved to D Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Moved_to_E_Stage__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Moved to E Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Moved_to_Installation_Stage__c</fullName>
        <label>Date Moved to Installation Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_Moved_to_Renewal_Stage__c</fullName>
        <label>Date Moved to Renewal Stage</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Days_in_Awareness_1_Stage__c</fullName>
        <formula>IF(
	NOT(ISBLANK(Date_Moved_to_Awareness_1_Stage__c)),
	IF(
		NOT(ISBLANK(Date_Moved_to_Awareness_2_Stage__c)),
		Date_Moved_to_Awareness_2_Stage__c - Date_Moved_to_Awareness_1_Stage__c,
		IF(
			NOT(ISBLANK(Date_Moved_to_Renewal_Stage__c)),
			Date_Moved_to_Renewal_Stage__c - Date_Moved_to_Awareness_1_Stage__c,			
			IF(
			   NOT(ISBLANK(Actual_Close_Date__c)),
			   Actual_Close_Date__c - Date_Moved_to_Awareness_1_Stage__c,
			   Today() - Date_Moved_to_Awareness_1_Stage__c
			   )
		)	   
	),0
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Awareness 1 Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_in_Awareness_2_Stage__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Date_Moved_to_Awareness_2_Stage__c))
	,IF(
		NOT(ISBLANK(Date_Moved_to_Renewal_Stage__c)),
		Date_Moved_to_Renewal_Stage__c - Date_Moved_to_Awareness_2_Stage__c,			
		IF(
		   NOT(ISBLANK(Actual_Close_Date__c)),
		   Actual_Close_Date__c - Date_Moved_to_Awareness_2_Stage__c,
		   Today() - Date_Moved_to_Awareness_2_Stage__c
		   )
		),0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Awareness 2 Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_in_C_Stage__c</fullName>
        <formula>IF(NOT(ISBLANK(Date_Moved_to_C_Stage__c)),
	IF(
	NOT(ISBLANK(Actual_Close_Date__c)), 
	Actual_Close_Date__c - Date_Moved_to_C_Stage__c, 
	Today() - Date_Moved_to_C_Stage__c			   
	),0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in C Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_in_Commitment_Stage__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Date_Moved_to_Commitment_Stage__c))
	,IF(
		NOT(ISBLANK(Date_Moved_to_Installation_Stage__c)), 
		Date_Moved_to_Installation_Stage__c - Date_Moved_to_Commitment_Stage__c, 
		IF(
			NOT(ISBLANK(Date_Moved_to_Awareness_1_Stage__c)),
			Date_Moved_to_Awareness_1_Stage__c - Date_Moved_to_Commitment_Stage__c,
			IF(
				NOT(ISBLANK(Date_Moved_to_Awareness_2_Stage__c)),
				Date_Moved_to_Awareness_2_Stage__c - Date_Moved_to_Commitment_Stage__c,
				IF(
					NOT(ISBLANK(Date_Moved_to_Renewal_Stage__c)),
					Date_Moved_to_Renewal_Stage__c - Date_Moved_to_Commitment_Stage__c,			
					IF(
					   NOT(ISBLANK(Actual_Close_Date__c)),
					   Actual_Close_Date__c - Date_Moved_to_Commitment_Stage__c,
					   Today() - Date_Moved_to_Commitment_Stage__c
					   )
				)	   
			)
		  )
		), 0
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Commitment Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_in_D_Stage__c</fullName>
        <formula>IF(NOT(ISBLANK(Date_Moved_to_D_Stage__c)),
IF(
	NOT(ISBLANK(Date_Moved_to_C_Stage__c)), 
	Date_Moved_to_C_Stage__c - Date_Moved_to_D_Stage__c, 
	IF(
		NOT(ISBLANK(Actual_Close_Date__c)),
		Actual_Close_Date__c - Date_Moved_to_D_Stage__c,
		Today() - Date_Moved_to_D_Stage__c			   
	  )
	), 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in D Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_in_E_Stage__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Date_Moved_to_E_Stage__c))
	,IF(
		NOT(ISBLANK(Date_Moved_to_D_Stage__c)), 
		Date_Moved_to_D_Stage__c - Date_Moved_to_E_Stage__c, 
		IF(
			NOT(ISBLANK(Date_Moved_to_C_Stage__c)),
			Date_Moved_to_C_Stage__c - Date_Moved_to_E_Stage__c,
			IF(
			   NOT(ISBLANK(Actual_Close_Date__c)),
			   Actual_Close_Date__c - Date_Moved_to_E_Stage__c,
			   Today() - Date_Moved_to_E_Stage__c
			   )
		  )
		), 0
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in E Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_in_Installation_Stage__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Date_Moved_to_Installation_Stage__c))
	,IF(
			NOT(ISBLANK(Date_Moved_to_Awareness_1_Stage__c)),
			Date_Moved_to_Awareness_1_Stage__c - Date_Moved_to_Installation_Stage__c,
			IF(
				NOT(ISBLANK(Date_Moved_to_Awareness_2_Stage__c)),
				Date_Moved_to_Awareness_2_Stage__c - Date_Moved_to_Installation_Stage__c,
				IF(
					NOT(ISBLANK(Date_Moved_to_Renewal_Stage__c)),
					Date_Moved_to_Renewal_Stage__c - Date_Moved_to_Installation_Stage__c,			
					IF(
					   NOT(ISBLANK(Actual_Close_Date__c)),
					   Actual_Close_Date__c - Date_Moved_to_Installation_Stage__c,
					   Today() - Date_Moved_to_Installation_Stage__c
					   )
				)	   
			)
		  ),0
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Installation Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_in_Renewal_Stage__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Date_Moved_to_Renewal_Stage__c))
	,IF(
		   NOT(ISBLANK(Actual_Close_Date__c)),
		   Actual_Close_Date__c - Date_Moved_to_Renewal_Stage__c,
		   Today() - Date_Moved_to_Renewal_Stage__c
		),0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Renewal Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace Engineering</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Food Science</fullName>
                </value>
                <value>
                    <fullName>Biological and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineering</fullName>
                </value>
                <value>
                    <fullName>Business, Economics, and Finance</fullName>
                </value>
                <value>
                    <fullName>Chemical Engineering</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Civil and Environmental Engineering</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Earth, Atmospheric, and Ocean Sciences</fullName>
                </value>
                <value>
                    <fullName>Electrical and Computer Engineering</fullName>
                </value>
                <value>
                    <fullName>Industrial Engineering</fullName>
                </value>
                <value>
                    <fullName>IT/Purchasing/Administration</fullName>
                </value>
                <value>
                    <fullName>Materials Sciences</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Mechanical Engineering</fullName>
                </value>
                <value>
                    <fullName>Mining and Minerals Engineering</fullName>
                </value>
                <value>
                    <fullName>Nuclear Engineering</fullName>
                </value>
                <value>
                    <fullName>Operations Research/Management Science</fullName>
                </value>
                <value>
                    <fullName>Petroleum Engineering</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Sociology and Anthropology</fullName>
                </value>
                <value>
                    <fullName>Statistics</fullName>
                </value>
                <value>
                    <fullName>Other Engineering</fullName>
                </value>
                <value>
                    <fullName>Other Sciences</fullName>
                </value>
                <value>
                    <fullName>Other IT/Purchasing/Administration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Edugain_Participant__c</fullName>
        <description>Install - eduGAIN Participant picklist</description>
        <label>eduGAIN Federation Participant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Email_for_Life__c</fullName>
        <label>Email for Life</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Entity_ID__c</fullName>
        <description>Install - Entity ID</description>
        <label>Entity ID</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Environment_Review_Notes__c</fullName>
        <description>Notes on Customer Environment Review Install task</description>
        <label>Environment Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Environment_Review_Status__c</fullName>
        <description>Status of Customer Environment Review Install task</description>
        <label>Environment Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Waiting on Internal</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <inlineHelpText>Estimated Close Date for Engagement</inlineHelpText>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>FIMTAH_Notes__c</fullName>
        <description>Notes for FIMTAH Install</description>
        <label>FIMTAH Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Go_Live_Date__c</fullName>
        <description>Install - Go Live Date</description>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Help_Ticket_Number__c</fullName>
        <description>Help Ticket Number for Install</description>
        <label>Help Ticket Number</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Ident_Management_URL__c</fullName>
        <description>Install - Identity Management URL</description>
        <label>Identity Management URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Identity_Management__c</fullName>
        <label>Identity Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Learning_Management_System__c</fullName>
        <label>Learning Management System</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>License_Manager_Ver__c</fullName>
        <description>Install - License Manager Version</description>
        <label>License Manager Version</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>License_Number__c</fullName>
        <description>License Number for Install</description>
        <label>License Number</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>License_Server_Config_Notes__c</fullName>
        <description>Notes for Enterprise License Server Configuration Install task</description>
        <label>License Server Config Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>License_Server_Config_Status__c</fullName>
        <description>Status of Enterprise License Server Configuration Install task</description>
        <label>License Server Config Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Waiting on Internal</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MAOTS_URL__c</fullName>
        <label>MAOTS URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>MAOTS__c</fullName>
        <label>MAOTS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MATLAB_Access_URL__c</fullName>
        <inlineHelpText>The account's URL for MATLAB access</inlineHelpText>
        <label>MATLAB Access URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>MDCS_Add_On__c</fullName>
        <label>MDCS Add-On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MW_Resources_published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MW Resources published?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Master_License_Number__c</fullName>
        <description>Install - Master License Number</description>
        <label>Master License Number</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Non_Standard_Use_Case__c</fullName>
        <description>Install - Non Standard Use Case</description>
        <label>Non Standard Use Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Non_Win_Reason__c</fullName>
        <label>Non-Win Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Lacking Product Functionality</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Lack of Interest or Pain</fullName>
                </value>
                <value>
                    <fullName>No Budget or Time or Resource</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Num_License_Servers__c</fullName>
        <description>Install - number of license servers</description>
        <label># of License Servers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Offerings__c</fullName>
        <label>Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MATLAB Onramp</fullName>
                </value>
                <value>
                    <fullName>MAOTS</fullName>
                </value>
                <value>
                    <fullName>Self-paced trainings</fullName>
                </value>
                <value>
                    <fullName>MATLAB Online/Mobile/Drive</fullName>
                </value>
                <value>
                    <fullName>ThingSpeak</fullName>
                </value>
                <value>
                    <fullName>Cody Coursework</fullName>
                </value>
                <value>
                    <fullName>zyBooks</fullName>
                </value>
                <value>
                    <fullName>Hardware Support Packages</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Offline_Usage_Q__c</fullName>
        <description>Install - Offline Usage Questionnaire link</description>
        <label>Offline Usage Questionnaire</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Success Engagements</relationshipLabel>
        <relationshipName>Customer_Success_Engagements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Portal_URL__c</fullName>
        <label>MW Hosted Portal URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Success Engagements</relationshipLabel>
        <relationshipName>Customer_Success_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>    </validationRules></CustomObject>